--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>platzimusic</title>
+    <title>Top Artists</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://platzi.github.io/platzimusic/dist/build.js"></script>
+    <script src="dist/build.js"></script>
   </body>
 </html>
